[package]
categories = ["api-bindings", "external-ffi-bindings"]
description = "Rust bindings for libinjection"
documentation = "https://docs.rs/libinjection"
edition = "2021"
homepage = "https://github.com/pangbit/libinjection-rs"
keywords = ["sqli", "xss", "injection"]
license = "MIT/Apache-2.0"
name = "libinjection"
readme = "README.md"
repository = "https://github.com/pangbit/libinjection-rs"
version = "0.3.5"

[build-dependencies]
bindgen = "0.70"
